@@ -4,7 +4,7 @@ use warnings FATAL => 'all';
 use Exporter 5.57 'import';
 
 use File::Basename qw/basename/;
-use File::Spec::Functions qw/splitpath canonpath abs2rel/;
+use File::Spec::Functions qw/splitpath canonpath abs2rel splitdir/;
 use Pod::Man;
 use Module::Load;
 
@@ -36,7 +36,7 @@ sub man3_pagename {
 	my ($vols, $dirs, $file) = splitpath(canonpath($filename));
 	$file = basename($file, qw/.pm .pod/);
 	$dirs = abs2rel($dirs, $base);
-	return join $separator, $dirs, "$file.3pm";
+	return join $separator, splitdir($dirs), "$file.3pm";
 }
 
 1;
