@@ -1,6 +1,7 @@
 Revision history for ExtUtils-Helpers
 
 {{$NEXT}}
+          Fix man3_pagename to properly split dirs
 
 0.016     2013-04-12 15:39:01 Europe/London
           Add some fixes to batch file generation [Christian Walde]
